oss/02-listeners/sni-multi-host/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-sni
  namespace: httpbin
spec:
  parentRefs:
  - name: sni
    namespace: kgateway-system
    sectionName: httpbin
  hostnames:
  - httpbin.example.com
  rules:
  - backendRefs:
    - name: httpbin
      port: 8000
